# mirmer.ai

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_FINAL.md  DEPLOY_NOW.md  ENTERPRISE_CONTACT_SETUP.md  FIREBASE_SETUP.md  IMPORT_FIX_EXPLANATION.md  INTEGRATION_STATUS.md  LICENSE  QUICK_REFERENCE.md  README.md  get_backend_logs.sh  nixpacks.toml  railway.json  run_migration.sh  start.sh  start_backend.sh  test_fixes.sh  test_fixes_simple.sh  test_imports.py  vercel.json  verify_integration.sh
.kiro/hooks/: api-function-generator.kiro.hook  auto-document-code.kiro.hook  (+4 more)
backend/: __init__.py  admin_fix_subscription.py  admin_upgrade_user.py  check_user_status.py  config.py  council.py  database.py  db_monitor.py  email_service.py  export_service.py  firebase_auth.py  fix_subscription_status.py  init_database.py  main.py  migrate_add_search_indexes.py  migrate_add_subscription_fields.py  migrate_to_postgres.py  models.py  openrouter.py  payments.py  performance.py  pyproject.toml  rate_limiter.py  requirements.txt  start_production.sh  storage.py  storage_json.py  storage_postgres.py  sync_users.py  test_config.py  test_email_service.py  test_increment.py  test_models.py  test_performance.py  test_sendgrid.py  test_usage.py  usage.py  usage_json.py  usage_postgres.py
backend/.hypothesis/constants/: 1b7ae431f1c62724  222ae28408653e99  c49e082d53655e6a  f637d7e966719575
backend/.hypothesis/examples/04e6b3400353b141/: 3095b3e24bfb3ce9  341aae18c779ab71  341c42eb0850e6ae  42827ee6f4d8a6fd  8e35fd449b9df1b6  aa6ebe7372551945  dab1441fe54f78ed  e0d6ed03f990fa13
backend/.hypothesis/examples/3095b3e24bfb3ce9/: a2773f6d2611b6ca
backend/.hypothesis/examples/341aae18c779ab71/: 539df98f253f3e3a
backend/.hypothesis/examples/8e35fd449b9df1b6/: 19a5b6e83d5199ac
backend/.hypothesis/examples/aa6ebe7372551945/: 771fee6b5fdd975e
backend/static/: cli-auth.html
backend/templates/: conversation_pdf.html
frontend/: .env.production  .env.production.example  build-cli-auth.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
sdk/: .gitignore  LICENSE  MANIFEST.in  PUBLISH_NOW.sh  README.md  pyproject.toml  update_domain.sh
sdk/examples/: async_example.py  basic_usage.py  conversation_management.py  streaming_example.py  test_with_backend.py
sdk/mirmer/: __init__.py  _version.py  async_client.py  auth.py  cli.py  client.py  exceptions.py  models.py  streaming.py
sdk/tests/: __init__.py
(+96 files in other folders)
