[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirmer-ai"
version = "0.1.2"
description = "Python SDK for Mirmer AI multi-LLM consultation system"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Mirmer AI", email = "support@mirmer.ai"}
]
keywords = ["ai", "llm", "multi-model", "consensus", "council"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "respx>=0.20.0",
]

[project.scripts]
mirmer = "mirmer.cli:main"

[project.urls]
Homepage = "https://mirmer-ai.vercel.app"
Documentation = "https://mirmer-ai.vercel.app"
Repository = "https://github.com/mirmer-ai/python-sdk"
"Bug Tracker" = "https://github.com/mirmer-ai/python-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mirmer*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
